// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with 1 expense totaling $94.34 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totaling 
    $94.34
  </p>
</div>
`;

exports[`should render ExpenseSummary with 2 expenses totaling $94.34 1`] = `
<div>
  <p>
    Viewing 
    2
     
    expenses
     totaling 
    $94.34
  </p>
</div>
`;
